# BookMusic

./: .gitignore  README.md  music.py
.claude/: launch.json
backend/: pyproject.toml  server.py
backend/bookmusic/: __init__.py  generator.py  llm.py  prompt.txt
backend/samples/: sample.txt
frontend/: index.html  prompt.txt
frontend/src/: app.js  llm-local.js  llm-worker.js  pdfdoc.js  player.js  reader.js  style.css
